--- a/force-app/main/default/lwc/leaveTracker/leaveTracker.html
+++ b/force-app/main/default/lwc/leaveTracker/leaveTracker.html
@@ -2,10 +2,10 @@
     <lightning-card>
         <lightning-tabset>
             <lightning-tab title="My Leaves" label="My Leaves">
-               <c-my-leaves onrefreshleaverequests = {refreshLeaveRequestsHandler}></c-my-leaves>
+               <c-my-leaves></c-my-leaves>
             </lightning-tab>
             <lightning-tab title="Leave Requests" label="Leave Requests">
-                <c-leave-Requests lwc:ref ="myLeavesComp"></c-leave-Requests>
+                <c-leave-Requests></c-leave-Requests>
             </lightning-tab>
         </lightning-tabset>
     </lightning-card>
