--- a/force-app/main/default/lwc/myLeaves/myLeaves.html
+++ b/force-app/main/default/lwc/myLeaves/myLeaves.html
@@ -1,18 +1,17 @@
 <template>
 <lightning-card>
     <lightning-button-icon icon-name="utility:add" variant="border-filled" slot="actions" onclick={onRequestClickHandler}></lightning-button-icon>
-    <lightning-datatable key-field="Id" data={MyLeaves} columns={columns}
-    onrowaction={rowActionHandler}></lightning-datatable>
+    <lightning-datatable key-field="Id" data={MyLeaves} columns={columns} onrowaction={rowActionHandler}></lightning-datatable>
 </lightning-card>
 
 <template lwc:if={showModalPopup}>
 <section role="dialog" tabindex="-1" aria-modal="true" aria-labelledby="modal-heading-01" class="slds-modal slds-fade-in-open slds-modal_small">
     <div class="slds-modal__container">
-    <button onclick={popupCloseHandler} class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse">
+    <lightning-button onclick={popupCloseHandler} class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse">
     <lightning-icon icon-name="utility:close" alternative-text="close" variant="inverse"
     size="small"></lightning-icon>
     <span class="slds-assistive-text">Cancel and close</span>
-    </button>
+    </lightning-button>
     <div class="slds-modal__header">
     <h1 id="modal-heading-01" class="slds-modal__title slds-hyphenate">Modal header</h1>
     </div>
@@ -33,7 +32,6 @@
         </div>
     </lightning-record-edit-form>
     </div>
-    
     </div>
     </section>
     <div class="slds-backdrop slds-backdrop_open" role="presentation"></div>
