--- a/force-app/main/default/lwc/leaveRequests/leaveRequests.html
+++ b/force-app/main/default/lwc/leaveRequests/leaveRequests.html
@@ -9,10 +9,10 @@
     <template lwc:if={showModalPopup}>
     <section role="dialog" tabindex="-1" aria-modal="true" aria-labelledby="modal-heading-01" class="slds-modal slds-fade-in-open slds-modal_small">
         <div class="slds-modal__container">
-        <lightning-button onclick={popupCloseHandler} class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse">
+        <button onclick={popupCloseHandler} class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse">
         <lightning-icon icon-name="utility:close" alternative-text="close" variant="inverse" size="small"></lightning-icon>
         <span class="slds-assistive-text">Cancel and close</span>
-        </lightning-button>
+        </button>
         <div class="slds-modal__header">
         <h1 id="modal-heading-01" class="slds-modal__title slds-hyphenate">Leave Requests</h1>
         </div>
